--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="favorilerim">FAVORİLERİM</string>
     <string name="kitaplik">KİTAPLIK</string>
     <string name="katagoriyok">Katagori Seçiminde Hata Oldu. Tekrar Deneyin.</string>
+    <string name="favori_url">http://mobiluygulama.pro/webservice/</string>
 </resources>
